middleman/kubernetes/export-central.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-worker
  namespace: selenium-worker
spec:
  selector:
    app: selenium-worker
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-worker-central-1
  namespace: selenium-worker
spec:
  selector:
    app: selenium-worker
  ports:
  - port: 5000
    targetPort: 5000
