middleman/kubernetes/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: node
  namespace: selenium-worker
  labels:
    service: node
spec:
  selector:
    app: node
  type: LoadBalancer
  sessionAffinity: None
  ports:
    - port: 3000
